[package]
name = "dlrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
ctrlc = "3.4.0"
error-chain = "0.12.4"
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ['blocking'] }
tokio = { version = "1.29.1", features = ["full"] }
quick-xml = { version = "0.28.1", features = ["serialize"] }
serde = { version = "1.0.157", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }

[[bin]]
name = "dlrs"
path = "main.rs"

