[package]
name = "dlrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
crossterm = "0.26.1"
ctrlc = "3.4.0"
anyhow = { version = "1.0", features = ["backtrace"] }
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["stream"] }
tokio = { version = "1.29.1", features = ["full"] }
quick-xml = { version = "0.30.0", features = ["serialize"] }
serde = { version = "1.0.157", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
sevenz-rust = { version = "0.4.3", features = ["bzip2"] }
clap = { version = "4.3.19", features = ["derive", "string"] }
serde_repr = "0.1.16"
serde_with = { version = "3.1.0", features = ["chrono"] }
bytes = { version = "1.4.0", features = ["std"] }
sqlite = "0.31.1"

[[bin]]
name = "dlrs"
path = "main.rs"

[[bin]]
name = "server"
path = "server.rs"

[[bin]]
name = "decode"
path = "decode.rs"

[[bin]]
name = "test"
path = "test.rs"

[profile.release] # A profile to try to minimize the size
panic = "abort" # Abort on Panic
strip = true
opt-level = "z" # Optimize For Size
lto = true # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
